Remove calls to private API